@startuml

package Presentation {
    class GenerateCandidateFieldsFileUI
}

package Domain {
    class Application
}

package Persistence {
    class JpaApplicationRepository
    interface ApplicationRepository
}

package Application {
    class GenerateCandidateFieldsFileController
    class PluginLoader
    interface Plugin
}

Presentation.GenerateCandidateFieldsFileUI --> Application.GenerateCandidateFieldsFileController
Application.GenerateCandidateFieldsFileController --> Application.PluginLoader
Application.GenerateCandidateFieldsFileController --> Persistence.ApplicationRepository
Persistence.ApplicationRepository <|-- Persistence.JpaApplicationRepository
Application.GenerateCandidateFieldsFileController --> Domain.Application
Application.GenerateCandidateFieldsFileController --> Application.Plugin

@enduml
